# lzfs

./: META  Makefile.am  Makefile.in  configure  configure.ac  lzfs.spec.in  lzfs_config.h  lzfs_config.h.in
config/: deb.am  lzfs-build.m4  lzfs-meta.m4  rpm.am  tgz.am
etc/: Makefile.am  Makefile.in
etc/init.d/: zfsload
module/: Makefile.in  lzfs_exportfs.c  lzfs_snap.c  lzfs_super.c  lzfs_vnops.c
